save updates to files
