# swagger.json
@@ -5,10 +5,10 @@
       "description": "Contacts API",
       "version": "1.0.0"
     },
-    "host": "localhost:3000",
+    "host": "CSE-341-Mosermain.onrender.com", 
     "basePath": "/",
     "schemes": [
-      "http"
+      "https"
     ],
     "paths": {
       "/api-docs": {
@@ -20,25 +20,19 @@
       },
       "/contacts/": {
         "get": {
-          "description": "API Key if needed: ",
-          "parameters": [
-            {
-              "name": "apiKey",
-              "in": "header",
-              "type": "string"
-            }
+          "description": "",
+          "produces": [
+            "application/json"
           ],
+          "parameters": [],
           "responses": {
             "200": {
               "description": "OK"
-            },
-            "500": {
-              "description": "Internal Server Error"
             }
           }
         },
         "post": {
-          "description": "API Key if needed: ",
+          "description": "",
           "parameters": [
             {
               "name": "body",
@@ -46,16 +40,19 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
+                  "firstName": {
                     "example": "any"
                   },
-                  "_id": {
+                  "lastName": {
                     "example": "any"
                   },
-                  "description": {
+                  "email": {
                     "example": "any"
                   },
-                  "location": {
+                  "favoriteColor": {
+                    "example": "any"
+                  },
+                  "birthday": {
                     "example": "any"
                   }
                 }
@@ -63,11 +60,8 @@
             }
           ],
           "responses": {
-            "200": {
-              "description": "OK"
-            },
-            "400": {
-              "description": "Bad Request"
+            "201": {
+              "description": "Created"
             },
             "500": {
               "description": "Internal Server Error"
@@ -75,28 +69,82 @@
           }
         }
       },
-      "/contacts/{_id}": {
+      "/contacts/{id}": {
         "get": {
-          "description": "API Key if needed: ",
+          "description": "",
+          "produces": [
+            "application/json"
+          ],
           "parameters": [
             {
-              "name": "_id",
+              "name": "id",
               "in": "path",
               "required": true,
-              "type": "string"
-            },
-            {
-              "name": "apiKey",
-              "in": "header",
               "type": "string"
             }
           ],
           "responses": {
             "200": {
               "description": "OK"
+            }
+          }
+        },
+        "put": {
+          "description": "",
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "type": "string"
             },
-            "404": {
-              "description": "Not Found"
+            {
+              "name": "body",
+              "in": "body",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "firstName": {
+                    "example": "any"
+                  },
+                  "lastName": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "favoriteColor": {
+                    "example": "any"
+                  },
+                  "birthday": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          ],
+          "responses": {
+            "204": {
+              "description": "No Content"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          }
+        },
+        "delete": {
+          "description": "",
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "204": {
+              "description": "No Content"
             },
             "500": {
               "description": "Internal Server Error"
